# harryhanln

./: .gitignore  .gitmodules  intro.md  readme.md  tolearn.md
OS/: installingSystem.md  ss.txt
OS/memory/: cache.c  cache.s  massif.out.174683  sb.c  so  so.c  so2.c
R/: note.md
R/dev/: .Rhistory  g.R  wh.R
algo/: randnum.cpp  randnum.txt  readme.md  sort.c  sorted.txt
algo/astar/: astar.c  astar.cpp
ams/: bona.s  makefile
asm/: sb.c  sb.s
asm/mips/: branch.asm  function.asm  helloWorld.asm  memoryAndVaraible.asm  note.md  readme.md  recursion.asm
asm/x86/: hello.s  holaMundo.s  note.md
c/: .clang-format  commandline.c  pointer.c  randint.txt  readbuffer.txt  readfile.c  sb.c  sort.c  struct.c  t.c
c/gcc/: note.md
c/keylistener/: SO.c  ncurses.c  ruten.c  unix.c
c/la/: matrix.c  np.py  readme.md
c/macros/: concatenation.c  variadic.c
c/note/: ANSIEscape.md  UsefulFunctionality.md  VT100Terminal.md  note.md  sharedLibrary.md  std.md
c/systemProgramming/: read.c
cpp/: .clang-format  key.cpp
cpp/TCPL/: intro.md
cpp/cmake/cmakeorg/ex1/: CMakeLists.txt  a.out  main.cpp
cpp/eg/: readme.md
cpp/example/: mutex.cpp  thread.cpp
cpp/sb/: ns.cc  (+4 more)
gdb/: note.md
gfx/: readme.md
git/: cheatsheet.md  note.md
hacker/: note.md
kernel/: note.md
linuxQuickStart/: i3.md  usefulTool.md
make/: note.md
miscellanea/: glfwC++command.txt  guide_terminal.md  rust.md  tol.md  tools.md  vscode.md
ml/: readme.md
network/: note.md
resource/: list.md
shell/: guide_terminal.md  note.md  rename.sh  tools.md
vim/: note.md  nvim.md  vimtex.md
(+303 files in other folders)
